<resources>
    <string name="app_name">SellIt</string>
    <string name="login_user">Login User</string>
    <string name="guest_user">Guest User</string>
    <string name="login">USERNAME</string>
    <string name="user_login">USER LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="register">Register</string>
    <string name="loginbtn">Login</string>
    <string name="user_registration">USER REGISTRATION</string>
    <string name="phone">PHONE</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="address">ADDRESS</string>
    <string name="get">GET</string>
    <string name="location">LOCATION</string>


    <string name="set_location">SET LOCATION</string>

    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="price">Price</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="hello_user">Hello,</string>
    <string name="signout">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="category">CATEGORY</string>
    <string name="item_price">ITEM PRICE</string>
    <string name="item_description">ITEM DESCRIPTION</string>
    <string name="item_name">ITEM NAME</string>
    <string name="item_title">ITEM TITLE</string>
    <string name="post_your_add">Post Your Ad</string>
    <string name="sub_category">SUB-CATEGORY</string>
    <string name="Dollar">$</string>
    <string name="imageUploadCount">No Image Added</string>
    <string name="imageUploadStatus">Image\nAdded</string>
    <string name="upload_images">UPLOAD IMAGE</string>
    <string name="view_upload">UPLOAD</string>
    <string name="price_range_in">PRICE RANGE in $</string>
    <string name="item_details">ITEM DETAILS</string>
    <string name="item_descr">ITEM Descr</string>
    <string name="seller_name">Seller Name</string>
    <string name="buy_item">BUY</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Thankyou">Thank you for Purchasing !!</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="ShopMore">Shop More</string>
    <string-array name="PriceRange">
        <item>none(selected)</item>
        <item>0-100</item>
        <item>100-500</item>
        <item>500-1000</item>
        <item>1000-2000</item>
        <item>2000-3000</item>
        <item>3000-4000</item>
        <item>4000-5000</item>
        <item>5000-10000</item>
    </string-array>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send">SEND</string>
    <string name="chat">Chat</string>
    <string name="sorry_no_item_item_found">Sorry! No item item found</string>
    <string name="locate">LOCATE</string>
    <string name="chat_list">Chat List</string>
    <string name="home">Home</string>
    <string name="item_posted_successfully">Item Posted successfully</string>
</resources>
