<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools">
    <item android:id="@+id/Buymenu"
        android:title="@string/buy"
        app:showAsAction="always|withText">
    </item>
    <item android:id="@+id/Sellmenu"
        android:title="@string/sell"
        app:showAsAction="always|withText">
    </item>
    <item android:id="@+id/mode"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/profile"
        app:showAsAction="always|withText">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">
            <group>
                <item android:id="@+id/hello"
                    android:title="@string/hello_user"
                    app:showAsAction="ifRoom|withText">
                </item>
                <item android:id="@+id/signout"
                    android:title="@string/signout"
                    app:showAsAction="ifRoom|withText">
                </item>
            </group>
        </menu>
    </item>
</menu>