<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="buyerseller.cs646.sdsu.edu.sellit.UserRegistrationActivity">
    <TextView
        android:text="@string/user_registration"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:id="@+id/registerTitle"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/login"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:id="@+id/newloginLabelId"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/newloginTextId"
            android:inputType="textCapWords|textPersonName"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor"><requestFocus/>
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/password"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/newpasswordLabelId"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:padding="5dp"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/newpasswordTextId"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/phone"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/phoneLabelId"
            android:padding="5dp"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/phoneTextId"
            android:inputType="phone"
            android:ems="10"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:orientation="horizontal">
        <TextView
            android:text="@string/address"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/addressLabelId"
            android:padding="5dp"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/addressTextId"
            android:ems="10"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor"
            android:inputType="textCapWords">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:orientation="horizontal">
        <TextView
            android:text="@string/location"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/locationLabelId"
            android:padding="5dp"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <EditText
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/latTextId"
            android:inputType="numberSigned|numberDecimal"
            android:maxLength="7"
            android:ems="10"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor">
        </EditText>
        <EditText
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/lonTextId"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:maxLength="7"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor">
        </EditText>
        <Button
            android:text="@string/get"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/getLonLatButtonId"
            android:layout_marginStart="15dp"
            android:onClick="getLocation"
             />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"


        android:orientation="horizontal">

        <Button
            android:text="@string/reset"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:id="@+id/resetBtn"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/saveBtn"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/save"
            android:onClick="saveUserData"
            tools:ignore="ButtonStyle,RtlHardcoded"            >

        </Button>
    </LinearLayout>
</LinearLayout>
