<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="buyerseller.cs646.sdsu.edu.sellit.UserLoginActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    android:weightSum="1">

    <TextView
        android:text="@string/user_login"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:id="@+id/loginTitle"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:text="@string/login"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="start|center"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:id="@+id/loginLabelId"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:id="@+id/loginTextId"
        android:inputType="textCapWords|textPersonName"
        android:ems="10"
        android:layout_marginBottom="5dp"
        tools:ignore="LabelFor"><requestFocus/>
    </EditText>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/password"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/passwordLabelId"
            android:padding="5dp"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/passwordTextId"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor">
        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_weight="0.47">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="loginUser"
            android:text="@string/loginbtn"
            tools:ignore="ButtonStyle,RtlHardcoded">
        </Button>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:text="@string/don_t_have_an_account"
            android:id="@+id/signUp"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/sign_up_here"
        android:id="@+id/registerBtn"
        />

    </LinearLayout>
    </LinearLayout>

</LinearLayout>
