<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
       android:id="@+id/LinearLayout"
        android:layout_height="50dp"
        android:gravity="top"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/apply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/Apply"
            android:layout_weight="1"
            style="?actionBarTabBarStyle"/>

        <Button
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/clear"
            style="?actionBarTabBarStyle"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/border"
        android:layout_above="@+id/LinearLayout"
        android:id="@+id/linearLayout"
        android:orientation="vertical">


        <TextView
            android:id="@+id/NoItemFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sorry_no_item_item_found"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/SubItemListView"
            android:layout_marginTop="20dp" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/price_spinner_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/price_range_in"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@color/colorTextView"
            android:layout_height="20dp"
            android:id="@+id/SpinnerTV"
            android:layout_weight="1"
            style="?actionBarTabBarStyle"/>

        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:id="@+id/PriceSpinner" />

    </LinearLayout>

<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sorry! No item item found"
        android:id="@+id/NoItemFound"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:layout_below="@+id/price_spinner_layout"
        android:layout_centerHorizontal="true" />-->

</RelativeLayout>